Fix closed panel spacing issue

--- a/src/base/panel.styl
+++ b/src/base/panel.styl
@@ -19,7 +19,7 @@
 
 	&__head
 		min-height 50px
-		margin -10px 0 10px
+		margin -0.5rem 0 0.5rem
 
 	&__head.-socle
 		margin -1.25rem -1.25rem 1.25rem -1.25rem
@@ -83,7 +83,7 @@
 
 	&.-closed
 		> .panel__head
-			margin-bottom -1.25rem
+			margin-bottom -0.5rem
 
 		> .panel__body,
 		> .panel__foot
